[package]
name = "udp_opt"
version = "0.1.0"
authors = ["Mahmoud Khaled Khera"]
repository="https://github.com/mahmoudkhera/udp_opt.git"
license = "MIT OR Apache-2.0"
edition = "2024"


[dependencies]
thiserror = "1.0"
tokio={version="1.47.1", features =["rt-multi-thread", "macros", "sync", "fs", "net", "io-util"] }