[package]
name = "udpopt"
version = "0.1.2"
edition = "2024"
authors = ["Mahmoud Khaled Khera"]
description = "A simple crate to test your UDP connection between two nodes"
repository="https://github.com/mahmoudkhera/udpopt.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["udp", "network", "async", "example"]   # optional
categories = ["network-programming", "asynchronous"] # optional


[dependencies]
thiserror = "1.0"
tokio={version="1.47.1", features =["rt-multi-thread", "macros", "sync", "fs", "net", "io-util","time"] }